ProjetCompil/Verif/Test/fail/interval2.cas
program
   A : 3 .. "youhouuuuuu";
begin
   NULL;
end.